Mejoras y correcciones